# RCLink

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
.github/workflows/: ci_cd.yml  issues.yml  main.yml
main/: CMakeLists.txt  idf_component.yml  partitions.csv
main/app/: main.lua
main/app/web/: index.html  index.js
main/app/web/css/: style.css
main/app/web/wasm/: RCLink.js  RCLink.wasm  RCLinkApp.js  RCLinkApp.wasm  controller.js  controller.wasm
main/hardware/: battery.cpp  button.cpp  storage.cpp
main/src/: data_stream.h  example.cpp  main.cpp  rc_link.cpp  server.cpp  server.h
main/src/core/: application.cpp
main/src/hardware/: display.cpp  storage.cpp
main/src/sandbox/: sandbox_app.cpp
main/src/server/: file_server.cpp  file_server.h  http_server.cpp  http_server.h  lock_guard.h  websocket_server.cpp  websocket_server.h
scripts/: get_webui.py
